dataManage updated
